--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 img {
   width: 500px;
   height: 700px;
+  display: block;
 }
